# QRawImageViewer

./: CMakeLists.txt  README.md
src/: configuration.cpp  configuration.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
